Trying fixing problem with pictures

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="/images/comoputer.jpg" alt="computer" width="360" height="300"></li>
-                <li><img src="/images/phone.jpg" alt="phone" width="360" height="300"></li>
-                <li><img src="/images/phone-and-comp.jpg" alt="phone and computer" width="360" height="300"></li>
+                <li><img src="./images/comoputer.jpg" alt="computer" width="360" height="300"></li>
+                <li><img src="./images/phone.jpg" alt="phone" width="360" height="300"></li>
+                <li><img src="./images/phone-and-comp.jpg" alt="phone and computer" width="360" height="300"></li>
             </ul>
         </section>
         <section>
