--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="/images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264" height="260">
+                <li><img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
                 <p>Product designer</p>
                 </li>
-                <li><img src="/images/tom-ford.jpg" alt="Photo Tom Ford" width="264" height="260">
+                <li><img src="./images/tom-ford.jpg" alt="Photo Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
                 </li>
-                <li><img src="/images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264" height="260">
+                <li><img src="./images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
                 </li>
-                <li><img src="/images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264" height="260">
+                <li><img src="./images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264" height="260">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
                 </li>
