--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header>        
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
-                <li>
-                    <a href="">Web<span>Studio</span></a>
-                </li>
                 <li>
                     Studio
                 </li>
@@ -24,22 +22,24 @@
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-        </ul>
+        <address>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+        </address>
     </header>
     <main>
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
                 <button type="button">Order Service</button>
-        </section>
-        <section>
+                <!--</section>
+                <section>-->
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -73,7 +73,7 @@
             <ul>
                 <li><img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264" height="260">
                 <h3>Mark Guerrero</h3>
-                <p>Product designer</p>
+                <p>Product Designer</p>
                 </li>
                 <li><img src="./images/tom-ford.jpg" alt="Photo Tom Ford" width="264" height="260">
                 <h3>Tom Ford</h3>
@@ -91,7 +91,7 @@
         </section>
     </main>
     <footer>
-        <a href="">Web<span>Studio</span></a>
+        <a href="">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
