--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
-                    Studio
+                    <a href="">Studio</a>
                 </li>
                 <li>
-                    Portfolio
+                    <a href="">Portfolio</a>
                 </li>
                 <li>
-                    Contacts
+                    <a href="">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -91,7 +91,7 @@
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
