--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
     <main>
         <section>
             <h1>Effective Solutions
-                for Your Business</h1>
-                <button type="button">Order Service</button>
-                <!--</section>
-                <section>-->
+                for Your Business
+            </h1>
+            <button type="button">Order Service</button>
+        </section>
+        <section>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -63,27 +64,27 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/comoputer.jpg" alt="computer" width="360" height="300"></li>
-                <li><img src="./images/phone.jpg" alt="phone" width="360" height="300"></li>
-                <li><img src="./images/phone-and-comp.jpg" alt="phone and computer" width="360" height="300"></li>
+                <li><img src="./images/comoputer.jpg" alt="computer" width="360"></li>
+                <li><img src="./images/phone.jpg" alt="phone" width="360"></li>
+                <li><img src="./images/phone-and-comp.jpg" alt="phone and computer" width="360"></li>
             </ul>
         </section>
         <section>
             <h2>Our Team</h2>
             <ul>
-                <li><img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264" height="260">
+                <li><img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
                 </li>
-                <li><img src="./images/tom-ford.jpg" alt="Photo Tom Ford" width="264" height="260">
+                <li><img src="./images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
                 </li>
-                <li><img src="./images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264" height="260">
+                <li><img src="./images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
                 </li>
-                <li><img src="./images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264" height="260">
+                <li><img src="./images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
                 </li>
