--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
+           <!-- <h2>Principles of work</h2>-->
             <ul>
                 <li>
                     <h3>Strategy</h3>
