--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button type="button">Order Service</button>
         </section>
         <section>
-           <!-- <h2>Principles of work</h2>-->
+            <h2 hidden>features</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
